--- a/CrudForms/Properties/Resources.resx
+++ b/CrudForms/Properties/Resources.resx
@@ -610,4 +610,10 @@
   <data name="logonew" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logonew.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="project_management_white_200x200" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\project-management-white-200x200.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logonewwhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logonewwhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
